# rsPhate

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: main.yml
scripts/: hmm  iv  noice
src/: main.rs  yt_tw_check.rs
src/commands/: about.rs  date.rs  embed.rs  fortune.rs  git.rs  hmm.rs  iv.rs  ls.rs  math.rs  meme.rs  mod.rs  msg.rs  noice.rs  owo.rs  projects.rs  quit.rs  rng.rs  rr.rs  star.rs  wipltrn.rs  ww.rs
src/functions/: mod.rs  prefix_space_check.rs  star.rs  yt_tw_check.rs
