[package]
name = "rsPhate"
version = "0.1.0"
authors = ["Ash <valleyknight@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
date_time = "2.1.0"
env_logger = "0.6"
kankyo = "0.2"
log = "0.4"
mpd = "0.0.12"
owoify = "0.1.5"
rand = "0.7"
rofl = "0.0.1"
serenity = "0.8"